[package]
name                   = "follow_camera"
edition                = "2021"
version.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
car            = { path = "../car" }
bevy.workspace = true

[lints]
workspace = true
